@@ -41,6 +41,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* SetFileValidData fix on windows (prevents zero-fill)
 	* fix minor lock_files issue on unix
 
 0.16.15 release
